<resources>
    <string name="error_facebook_login_canceled">Login com o Facebook cancelado.</string>
    <string name="error_facebook_login_unknown_error">Erro desconhecido com o login com o Facebook, tente novamente e contate o administrador.</string>
    <string name="error_failed_signin_email_exists">Falha ao entrar\n\nEsse e-mail já está sendo usado em nosso sistema e dispositivo.\nTente novamente com outro método de login.</string>
    <string name="error_unknown_error">Erro desconhecido, tente novamente e contate o administrador.</string>
    <string name="error_signin">Algo deu errado ao fazer login, tente novamente.</string>
    <string name="error_invalid_email">Email inválido, digite novamente.</string>
    <string name="error_password_too_small">Sua senha precisa ter pelo menos 6 caracteres, digite novamente.</string>
    <string name="error_all_fields_required">Todos os campos são obrigatórios, tente novamente.</string>
    <string name="error_user_password_incorrect">Usuário e/ou senha incorreto(s).</string>
    <string name="user_created_successfully">Usuário criado com sucesso.</string>
    <string name="creating_user">Criando o usuário, por favor aguarde…</string>
    <string name="processing_login">Processando login, por favor aguarde…</string>
    <string name="facebook_app_id">335153270268330</string>
    <string name="fb_login_protocol_scheme">fb335153270268330</string>
    <string name="app_name">Pra agora</string>
    <string name="app_name_main">Pra agora</string>
    <string name="label_main_categorias">Categorias</string>
    <string name="loading_providers_pls_wait">Carregando prestadores, por favor aguarde…</string>
    <string name="loading_publications_pls_wait">Carregando suas publicações, por favor aguarde…</string>
    <string name="error_loading_providers">Erro ao carregar os prestadores.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_internet_connection">Sem conexão com à internet</string>
    <string name="action_settings">Settings</string>
    <string name="label_main_title">Pra agora</string>
    <string name="button_main_cadastrar">Cadastrar Serviço</string>
    <string name="label_menu_lateral_title">Pra agora</string>
    <string name="label_menu_lateral_categorias">Categorias</string>
    <string name="label_menu_lateral_cadastrar">Cadastrar Serviço</string>
    <string name="label_menu_lateral_publicacoes">Minhas Publicações</string>
    <string name="label_menu_lateral_plans">Planos de Pagamento</string>
    <string name="label_menu_lateral_dicas">Dicas de Segurança</string>
    <string name="label_menu_lateral_termos">Termos de Uso</string>
    <string name="label_menu_lateral_subtitulo">Contato e Dúvidas</string>
    <string name="label_menu_lateral_duvidas">Dúvidas Frequentes</string>
    <string name="label_menu_lateral_fale">Fale Conosco</string>
    <string name="label_cadastro_serviço_categoria">Categoria</string>
    <string name="label_cadastro_serviço_Especialidade">Especialidade</string>
    <string name="screen_register_service">Cadastrar serviço</string>
    <string name="screen_faq">Dúvidas Frequentes</string>
    <string name="cpf_mask">###.###.###-##</string>
    <string name="phone_mask">(##)#####-####</string>
    <string name="birth_mask">##/##/####</string>
    <string name="postalCode_mask">#####-###</string>
    <string name="question_1">O que é a Pra agora</string>
    <string name="answer_1">O Pra agora é uma plataforma (site e aplicativo disponível para celulares Android e iOS) que tem como objetivo conectar
        clientes a diversos profissionais do mercado.\nSe você busca por um profissional para realizar um determinado serviço de forma a satisfazer as suas necessidades,
        basta entrar na plataforma, digitar a região onde se encontra o profissional, selecionar o campo de atuação do profissional desejado e
        conversar com ele diretamente, simples assim.\n\nPossuímos as seguintes categorias de serviço:\n\nAssistência Técnica;\nConstrução e reformas;\nServiços domésticos;\nAulas;\nBeleza e estética;\nDesign e tecnologia;\nConsultoria;\nSaúde;\nEventos;\nAutos;\nAnimais;\nArte e cultura.\n\nContrate pelo
        Pra agora de maneira rápida e prática, há profissionais em diversas categorias dispostos a resolver os seus problemas.
    </string>
    <string name="question_2">Como baixar o app do Pra agora?</string>
    <string name="answer_2">Para baixar nosso aplicativo é necessário que você tenha um celular smartphone.
        O aplicativo está disponível no sistema Android e IOS.\n\nBasta acessar o Play Store, caso seu celular seja Android,
        ou o App Store caso seu celular seja iOS e busque por "Pra agora". Clique em “instalar”, depois em “aceitar” e finalmente
        quando o download for concluído basta clicar em “abrir”.  Pronto! Agora você já pode começar a usar a plataforma Pra agora
        direto de seu celular! Você só precisa procurar um profissional que atenda às suas necessidades e tratar de orçamentos
        e serviços diretamente com o profissional desejado.\n\nContrate pelo Pra agora de maneira rápida e prática, há profissionais]
        em diversas categorias dispostos a resolver os seus problemas.
    </string>
    <string name="question_3">Como encontrar um profissional pelo site?</string>
    <string name="answer_3">Você pode abrir a solicitação pelo aplicativo, disponível para Android e iOS ou diretamente
        pelo site.\n\nNo site, ao clicar em “Sou cliente”, você pode escolher diretamente a categoria do serviço
        que está precisando na cidade que você deseja. Ao visualizar os contatos de profissionais, você pode escolher
        o que melhor lhe atender e tratar a negociação do serviço diretamente com esse profissional.\n\nContrate pelo
        Pra agora de maneira rápida e prática, há profissionais em diversas categorias dispostos a resolver os seus problemas.
    </string>
    <string name="question_4">Como encontrar um profissional pelo app?</string>
    <string name="answer_4">Para encontrar um profissional, se você já tem o aplicativo do Pra agora, também é simples. No app, ao clicar
        em “Sou cliente”, você pode escolher diretamente a categoria do serviço que está precisando na cidade que você deseja.
        Ao visualizar os contatos de profissionais, você pode escolher o que melhor lhe atender e tratar a negociação do serviço
        diretamente com esse profissional.\n\nContrate pelo Pra agora de maneira rápida e prática, há profissionais em diversas
        categorias dispostos a resolver os seus problemas.
    </string>
    <string name="question_5">Como os profissionais são selecionados?</string>
    <string name="answer_5">A plataforma Pra agora seleciona os profissionais de acordo com o serviço solicitado e dentro da localização
        do endereço solicitado. Ao encontrar os profissionais, você terá a liberdade de escolhe-los de acordo com as recomendações
        de outros clientes, pontuações entre outros. Contrate pelo Pra agora de maneira rápida e prática, há profissionais em
        diversas categorias disposto a resolver os seus problemas.\n\nContrate pelo Pra agora de maneira rápida e prática,
        há profissionais em diversas categorias dispostos a resolver os seus problemas.
    </string>
    <string name="question_6">Como contratar com segurança?</string>
    <string name="answer_6">A plataforma Pra agora faz apenas a indicação do contato de profissionais. Antes de contratar,
        entre em contato com os profissionais, analise a forma de atendimento e peça informações sobre preço, garantia e
        contrato e disponibilidade do profissional.\n\nObs: A negociação e pagamento do serviço é feito diretamente entre
        você e o profissional.\n\nAbaixo segue algumas dicas de como proceder antes de fechar negócio:\n\n\t\t1. Analise o
        profissional, valores do serviço e a forma de atendimento;\n\t\t2. Veja se o profissional possui avaliações
        de outros clientes;\n\t\t3. Certifique-se de que é o mesmo que irá te atende-lo presencialmente;\n\t\t4. Faça um contrato
        de serviços ou peça um recibo com seu nome/nome da empresa, telefone para contato, CNPJ/CPF;\n\t\t5. Pergunte quais
        materiais e serviços estão inclusos. Assim você evita surpresas com o aumento de custo posteriormente;\n\t\t6. Não
        efetue o pagamento total do serviço antes que ele seja finalizado;\n\t\t7. Pergunte se existe um período de garantia
        do serviço prestado e inclua essa informação no contrato.\n\nAntes de finalizar a contratação ou negociação
        com o profissional, você deverá se informar sobre as suas especificações, prazos e qualidades buscando garantia
        e satisfação do serviço prestado para sua necessidade.\n\nFeche qualquer contrato seguindo nossas dicas com a nossa
        plataforma.\n\nContrate pelo Pra agora de maneira rápida e prática, há profissionais em diversas categorias dispostos
        a resolver os seus problemas.
    </string>
    <string name="question_7">Como resolver problemas com o profissional?</string>
    <string name="answer_7">A plataforma Pra agora te ajuda a localizar profissionais próximos na região desejada. Entretanto,
        a plataforma Pra agora não se responsabiliza e não oferece garantias pelos serviços prestados por profissionais que
        indicamos.\n\nRecomendamos que todos os clientes façam um contrato com o profissional, peçam recibos e não paguem
        todo o valor do serviço antes que ele seja finalizado.\n\nCaso você precise reportar algum problema com o profissional
        contratado, pedimos que entre em contato com a nossa equipe e informe os dados do profissional. A situação será
        analisada, e se necessário, será efetuado o bloqueio temporário e/ou permanente do perfil deste profissional.
        O profissional cadastrado será notificado para que ele entre em contato e solucione o problema pendente.\n\nEm caso de
        dúvidas, sugestões ou problemas com a utilização do site www.Pra agora.com.br, o usuário poderá contatar diretamente
        o seu serviço de atendimento, através do endereço de e-mail: sacPra agora.com.br.
    </string>
    <string name="question_8">Como avaliar o profissional contratado?</string>
    <string name="title_category">praAgora</string>
    <string name="text_category">Selecione como você deseja continuar...</string>
    <string name="button_category_client">Cliente</string>
    <string name="button_category_provider">Prestrador</string>
    <string name="title_login">praAgora</string>
    <string name="email_login">Email</string>
    <string name="senha_login">Senha</string>
    <string name="button_entrar_login">Entrar</string>
    <string name="ou_login">--------------------ou--------------------</string>
    <string name="plan_one">Primeiro Mês</string>
    <string name="plan_two">Plano Mensal</string>
    <string name="plan_three">Plano Trimestral</string>
    <string name="plan_four">Plano Semestral</string>
    <string name="plan_five">Plano Anual</string>
</resources>