<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/service"
    tools:context="harmonytech.praagora.view.UsersCategoryActivity">
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <harmonytech.praagora.controller.custom_widgets.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_category"
            android:textStyle="bold"
            android:textSize="75dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textColor="@color/colorBackground"
            android:layout_marginBottom="110dp"/>

        <harmonytech.praagora.controller.custom_widgets.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_category"
            android:textStyle="bold"
            android:textSize="22dp"
            android:gravity="center"
            android:textColor="@color/colorBackground"
            android:layout_marginBottom="35dp"/>

        <harmonytech.praagora.controller.custom_widgets.MyCustomButton
            android:id="@+id/category_client"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/button_category_client"
            android:layout_gravity="center"
            android:onClick="button_client"/>

        <harmonytech.praagora.controller.custom_widgets.MyCustomButton
            android:id="@+id/category_provider"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/button_category_provider"
            android:layout_gravity="center"
            android:onClick="buttonProvider"/>

    </LinearLayout>

</RelativeLayout>
