<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/service"
    tools:context="harmonytech.praagora.view.SignWithActivity">

    <harmonytech.praagora.controller.custom_widgets.MyCustomTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textStyle="bold"
        android:textSize="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorBackground"
        android:layout_marginBottom="7dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:weightSum="1"
        android:layout_marginTop="35dp"
        android:layout_below="@id/title">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp">

            <harmonytech.praagora.controller.custom_widgets.MyCustomEditText
                android:id="@+id/email_login"
                android:layout_width="310dp"
                android:layout_height="40dp"
                android:background="#fff"
                android:layout_marginBottom="7dp"
                android:hint="@string/email_login"
                android:paddingLeft="10dp"
                android:textSize="15dp"/>

            <harmonytech.praagora.controller.custom_widgets.MyCustomEditText
                android:id="@+id/senha_login"
                android:layout_width="310dp"
                android:layout_height="40dp"
                android:background="#fff"
                android:hint="@string/senha_login"
                android:paddingLeft="10dp"
                android:textSize="15dp"/>
        </LinearLayout>

        <harmonytech.praagora.controller.custom_widgets.MyCustomButton
            android:layout_width="310dp"
            android:layout_height="55dp"
            android:text="@string/button_entrar_login"
            android:layout_gravity="center"
            android:layout_marginBottom="55dp"/>

        <harmonytech.praagora.controller.custom_widgets.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ou_login"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_marginBottom="45dp"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.22" />
    </LinearLayout>

</RelativeLayout>
